--- a/vovchek_interf.ipynb
+++ b/vovchek_interf.ipynb
@@ -773,9 +773,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "PrysmInterf_env",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -787,7 +787,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.2"
   },
   "panel-cell-order": [
    "e3ffd757-cf5b-4bfe-86f6-d9f7fcf0d002",
